--- a/Epicos.html
+++ b/Epicos.html
@@ -3,7 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="Alan, Pilu, Eve, Pablo"  >
+	<meta name="description" content="Trabajo grupal Curso Programador Web">
+	<meta name="keywords" content="TECNO3F, Programacion web, codigo, proyecto grupal, pagina web, estudiantes web, Programador">
+	<meta name="author" content="Alan, Pilu, Eve, Pablo">
+	<meta name="robots" content="index, follow">
+	<meta name="googlebot" content="index, follow">
 	<title>Diario Deportvo Ole</title>
 	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<link rel="stylesheet" type="text/css" href="ESTILO.CSS">
@@ -28,7 +32,7 @@
 		</ul>
 	</nav>
 	<div id="calaDeH">
-		<img id="imglogo" src="img/logo_ole _verde.png">
+		<img id="imglogo" src="img/logo_ole _verde.png" alt="imagen logo">
 		<h1 id="unoH">Bienvenido al diario deportivo Ole</h1>
 	</div>
 
@@ -37,7 +41,7 @@
 	
 	<div class="cuerpo cuerpoSpagina">
 
-		 <iframe id="vEpic" width="560" height="315" src="https://www.youtube.com/embed/dfU4Ml3bO30" alt="Video no soportado" title="15 goles Epicos" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen> </iframe>
+		 <iframe id="vEpic" width="560" height="315" src="https://www.youtube.com/embed/dfU4Ml3bO30" alt="Video de Mejores momentos" title="15 goles Epicos" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen> </iframe>
 
 	</div>
 	<div id="notaEpic">
@@ -52,9 +56,9 @@
 		
 		<div class="footDiv">
 			<ul>
-				<li><img class="iconFoot" src="img/iconFace.png"><a href="#">  Facebook</a></li> 
-				<li><img class="iconFoot" src="img/iconTw.png"><a href="#">  Twitter</a></li>
-				<li><img class="iconFoot" src="img/iconInsta.png"><a href="#">  Instagram</a></li>
+				<li><img class="iconFoot" src="img/iconFace.png" alt="Imagen Icon Social Media"><a href="#">  Facebook</a></li> 
+				<li><img class="iconFoot" src="img/iconTw.png" alt="Imagen Icon Social Media"><a href="#">  Twitter</a></li>
+				<li><img class="iconFoot" src="img/iconInsta.png" alt="Imagen Icon Social Media"><a href="#">  Instagram</a></li>
 			</ul>
 		</div>
 
