--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -3,7 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="Alan, Pilu, Eve, Pablo"  >
+	<meta name="description" content="Trabajo grupal Curso Programador Web">
+	<meta name="keywords" content="TECNO3F, Programacion web, codigo, proyecto grupal, pagina web, estudiantes web, Programador">
+	<meta name="author" content="Alan, Pilu, Eve, Pablo">
+	<meta name="robots" content="index, follow">
+	<meta name="googlebot" content="index, follow">
 	<title>Diario Deportvo Ole</title>
 	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<link rel="stylesheet" type="text/css" href="ESTILO.CSS">
@@ -11,8 +15,9 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@1,200&family=Merriweather:ital@1&display=swap" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@1,200&family=Josefin+Sans:ital@1&family=Merriweather:ital@1&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@1,200&family=Josefin+Sans:ital@1&family=Merriweather:ital@1&display=swap" rel="stylesheet">
+	<link rel="icon" type="image/x-icon" href="img/favicon.ico">
 
 </head>
 
@@ -35,7 +40,7 @@
 	<h2 class="hDos">Una Tierra de Futbol</h2>
 	
 	<div class="cuerpo"> 
-		<img class="imgnoticia" src="img/campeones.jpg" alt="imagen uno">
+		<img class="imgnoticia" src="img/campeones.jpg" alt="imagen principal">
 		<p class=" nota">Este 18 se cumplen cinco meses desde que Argentina se consagró campeón del mundo el 18 de diciembre de 2022. La selección albiceleste logró el anhelado título en el Estadio Lusail de Qatar, tras vencer a Francia en la gran final. El equipo argentino, liderado por Lionel Messi, desplegó un gran nivel a lo largo del torneo y se consagró merecidamente como campeón del mundo por tercera vez en su historia. El país celebró con gran alegría y emoción este logro histórico, que quedará en la memoria de los argentinos por mucho tiempo.
 		La victoria de Argentina en el Mundial de Fútbol generó una gran unión y solidaridad entre los argentinos, que celebraron con gran emoción y alegría el logro histórico de su selección. Los hinchas y seguidores expresaron su gratitud y admiración por los jugadores y el cuerpo técnico, en un momento que quedará para siempre en la memoria y en el corazón de todos los argentinos.</p>
 
@@ -47,9 +52,9 @@
 		
 		<div class="footDiv">
 			<ul>
-				<li><img class="iconFoot" src="img/iconFace.png" alt="Imagen no disponible"><a href="#">  Facebook</a></li> 
-				<li><img class="iconFoot" src="img/iconTw.png" alt="Imagen no disponible"><a href="#">  Twitter</a></li>
-				<li><img class="iconFoot" src="img/iconInsta.png" alt="Imagen no disponible"><a href="#">  Instagram</a></li>
+				<li><img class="iconFoot" src="img/iconFace.png" alt="Imagen Icon Social Media"><a href="#">  Facebook</a></li> 
+				<li><img class="iconFoot" src="img/iconTw.png" alt="Imagen Icon Social Media"><a href="#">  Twitter</a></li>
+				<li><img class="iconFoot" src="img/iconInsta.png" alt="Imagen Icon Social Media"><a href="#">  Instagram</a></li>
 			</ul>
 		</div>
 
